--- a/src/stylesheets/mainStyles.less
+++ b/src/stylesheets/mainStyles.less
@@ -99,10 +99,12 @@ a {
     display: inline-block;
     padding: 10px;
     text-align: center;
+    transition: all .5s;
 
     &:hover {
         cursor: pointer;
         background-color: hsl(hue(@darkPurple), 50%, 50%);
+        box-shadow: 0px 0px 20px -5px @darkGray;
     }
 
     &.backGreen {
@@ -140,6 +142,28 @@ a {
 
 .fullWidth {
     width: 100%;
+}
+
+.border {
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 3px;
+
+    &.darkPurple {
+        border-color: @darkPurple;
+    }
+
+    &.green {
+        border-color: @green;
+    }
+
+    &.medPurple {
+        border-color: @mediumPurple;
+    }
+
+    &.black {
+        border-color: @darkGray;
+    }
 }
 
 input {
@@ -206,7 +230,7 @@ input:focus {
 }
 
 .raised {
-    box-shadow: 0px 0px 20px 0px @darkGray;
+    box-shadow: 0px 0px 20px -5px @darkGray;
 }
 
 .thumbnail {
