--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -10,7 +10,6 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow-y: none;
 }
 
 a {
@@ -31,24 +30,28 @@ a {
     padding-top: 60px;
 }
 
+.stats {
+    box-sizing: border-box;
+    padding: 20px;
+    padding-top: 60px;
+}
+
 
 
 .headlinr {
     box-sizing: border-box;
     width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
 
     .column {
         display: flex;
         padding: 20px;
+        flex-direction: column;
     }
 
     .left {
-        display: flex;
         flex: 1;
-        flex-direction: column;
 
         h1 {
             margin-bottom: 15px;
@@ -79,14 +82,11 @@ a {
     }
 
     .middle {
-        display: flex;
         flex: 2;
-        flex-direction: column;
     }
 
     .right {
         flex: 1;
-        flex-direction: column;
 
         .trends-panel {
             border-radius: 3px;
