--- a/src/stylesheets/mainStyles.less
+++ b/src/stylesheets/mainStyles.less
@@ -100,6 +100,7 @@ a {
     padding: 10px;
     text-align: center;
     transition: all .5s;
+    user-select: none;
 
     &:hover {
         cursor: pointer;
@@ -252,18 +253,16 @@ input:focus {
 
 ::-webkit-scrollbar {
     background-color: white;
-    border-left: 1px solid @lightGray;
-    width: 10px;
+    width: 7px;
 }
 
 ::-webkit-scrollbar-track {
-    border-right: 1px solid @lightGray;
+
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: @mediumGray;
-    border: 1px solid @lightGray;
-    border-radius: 3px;
+    background-color: @mediumPurple;
+    border-radius: 10px;
 }
 
 
