Trying to get scaling down, moved player like and dislikes over to game, need to start automation

--- a/src/stylesheets/components/dashboard.less
+++ b/src/stylesheets/components/dashboard.less
@@ -44,16 +44,29 @@
                     p {
                         color: @white;
                     }
-                    background-color: @green;
                     margin-right: 10px;
                     padding: 5px 10px;
 
                     &.negative {
                         margin-right: 0;
                         margin-left: 10px;
-                        background-color: @mediumPurple;
                     }
 
+                    &.green {
+                        background-color: @green;
+                    }
+
+                    &.blue {
+                        background-color: @blue;
+                    }
+
+                    &.yellow {
+                        background-color: @yellow
+                    }
+
+                    &.purple {
+                        background-color: @mediumPurple;
+                    }
                 }
             }
 
