--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -81,6 +81,17 @@ a {
   background-color: #7040bf;
   box-shadow: 0px 0px 20px -5px #393D3F;
 }
+.btn.inverse {
+  background-color: transparent;
+  border: 1px solid #4F2D87;
+  border-radius: 3px;
+  color: #4F2D87;
+  padding: 10px 50px;
+}
+.btn.inverse:hover {
+  background-color: #4F2D87;
+  color: #F0F1ED;
+}
 .btn.backGreen {
   background-color: #7CC7A9;
 }
@@ -283,7 +294,6 @@ input:focus {
   text-align: right;
 }
 .dashboard .graphs-container .graphs-column .bar-container .bar {
-  background-color: #7CC7A9;
   margin-right: 10px;
   padding: 5px 10px;
 }
@@ -293,6 +303,17 @@ input:focus {
 .dashboard .graphs-container .graphs-column .bar-container .bar.negative {
   margin-right: 0;
   margin-left: 10px;
+}
+.dashboard .graphs-container .graphs-column .bar-container .bar.green {
+  background-color: #7CC7A9;
+}
+.dashboard .graphs-container .graphs-column .bar-container .bar.blue {
+  background-color: #08B2E3;
+}
+.dashboard .graphs-container .graphs-column .bar-container .bar.yellow {
+  background-color: #EAC435;
+}
+.dashboard .graphs-container .graphs-column .bar-container .bar.purple {
   background-color: #6A66A3;
 }
 .dashboard .graphs-container .graphs-column .text-container {
@@ -538,14 +559,27 @@ input:focus {
   align-items: center;
   background-color: #F0F1ED;
   display: flex;
+  position: relative;
   flex-direction: column;
   justify-content: center;
   width: 100%;
   height: 100%;
 }
+.upgrades .upgrades-container .close {
+  color: #4F2D87;
+  position: absolute;
+  font-size: 50px;
+  padding-right: 15px;
+  padding-top: 5px;
+  top: 0;
+  right: 0;
+}
+.upgrades .upgrades-container .close:hover {
+  cursor: pointer;
+}
 .upgrades .upgrades-container .power-ups {
   display: flex;
-  padding: 20px 0px;
+  padding: 40px 0px;
   width: 90%;
 }
 .upgrades .upgrades-container .power-ups .power-up-container {
