--- a/src/stylesheets/components/upgrades.less
+++ b/src/stylesheets/components/upgrades.less
@@ -12,14 +12,29 @@
         align-items: center;
         background-color: @white;
         display: flex;
+        position: relative;
         flex-direction: column;
         justify-content: center;
         width: 100%;
         height: 100%;
 
+        .close {
+            color: @darkPurple;
+            position: absolute;
+            font-size: 50px;
+            padding-right: 15px;
+            padding-top: 5px;
+            top: 0;
+            right: 0;
+
+            &:hover {
+                cursor: pointer;
+            }
+        }
+
         .power-ups {
             display: flex;
-            padding: 20px 0px;
+            padding: 40px 0px;
             width: 90%;
 
             .power-up-container {
