Upgrade branches added. Automation Added. Visual Panels Added. Almost done!

--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -92,6 +92,9 @@ a {
   background-color: #4F2D87;
   color: #F0F1ED;
 }
+.btn.backGray {
+  background-color: #AAACA9;
+}
 .btn.backGreen {
   background-color: #7CC7A9;
 }
