--- a/src/stylesheets/mainStyles.less
+++ b/src/stylesheets/mainStyles.less
@@ -123,6 +123,10 @@ a {
         }
     }
 
+    &.backGray {
+        background-color: @lightGray;
+    }
+
     &.backGreen {
         background-color: @green;
 
