--- a/src/stylesheets/components/start.less
+++ b/src/stylesheets/components/start.less
@@ -3,6 +3,7 @@
     background-image: url('../img/millenials.jpg');
     background-size: cover;
     background-position: center center;
+    flex: 1;
     justify-content: center;
     align-items: center;
     flex-direction: column;
