--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -47,7 +47,7 @@ h5 {
 h6 {
   color: #7CC7A9;
   font-family: 'Montserrat';
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 500;
   text-transform: uppercase;
 }
@@ -94,6 +94,12 @@ a {
 }
 .btn.backGray {
   background-color: #AAACA9;
+}
+.btn.backYellow {
+  background-color: #EAC435;
+}
+.btn.backYellow:hover {
+  background-color: #f5ce3d;
 }
 .btn.backGreen {
   background-color: #7CC7A9;
@@ -262,7 +268,8 @@ input:focus {
 .dashboard {
   box-sizing: border-box;
   padding: 20px;
-  padding-top: 60px;
+  padding-top: 75px;
+  min-height: min-content;
 }
 .dashboard .graphs-container {
   display: flex;
@@ -476,12 +483,28 @@ input:focus {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 10px;
+  padding-left: 15px;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 100;
+}
+.headlinr-nav p {
+  color: #F0F1ED;
+}
+.headlinr-nav p:hover {
+  color: white;
+  cursor: pointer;
+  text-decoration: underline;
+}
+.headlinr-nav .logo:hover {
+  cursor: pointer;
+}
+.headlinr-nav .dashboard-link {
+  padding: 25px 15px;
+  background-color: #08B2E3;
+  margin-left: 15px;
 }
 .headlinr-nav h1 {
   color: #F0F1ED;
@@ -499,16 +522,12 @@ input:focus {
   height: 24px;
   margin-right: 10px;
 }
-.headlinr-nav .user-info:hover {
-  color: white;
-  cursor: pointer;
-  text-decoration: underline;
-}
 .start {
   background-color: rgba(0, 0, 0, 0.2);
   background-image: url('../img/millenials.jpg');
   background-size: cover;
   background-position: center center;
+  flex: 1;
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -609,36 +628,49 @@ input:focus {
 }
 html,
 body {
+  display: flex;
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
 }
+#app {
+  display: flex;
+  flex: 1;
+}
 a {
   text-decoration: none;
 }
-.game,
-.start,
-.stats {
+.start {
   display: flex;
   width: 100%;
   height: 100%;
 }
+.stats {
+  display: flex;
+  min-height: min-content;
+}
 .game {
   box-sizing: border-box;
+  display: flex;
+  min-height: min-content;
   padding: 20px;
-  padding-top: 60px;
+  padding-top: 75px;
+  position: relative;
+  overflow-y: scroll;
 }
 .stats {
   box-sizing: border-box;
   padding: 20px;
-  padding-top: 60px;
+  padding-top: 75px;
 }
 .headlinr {
   box-sizing: border-box;
   width: 100%;
   display: flex;
   flex-direction: column;
+  position: relative;
+  overflow-y: scroll;
 }
 .headlinr .column {
   display: flex;
