--- a/src/stylesheets/components/dashboard.less
+++ b/src/stylesheets/components/dashboard.less
@@ -1,7 +1,8 @@
 .dashboard {
     box-sizing: border-box;
     padding: 20px;
-    padding-top: 60px;
+    padding-top: 75px;
+    min-height: min-content;
 
     .graphs-container {
         display: flex;
