--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -6,34 +6,47 @@
 @import 'components/upgrades';
 
 html, body {
+    display: flex;
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
 }
 
+#app {
+    display: flex;
+    flex: 1;
+}
+
 a {
     text-decoration: none;
 }
 
-.game, .start, .stats {
+.start {
     display: flex;
     width: 100%;
     height: 100%;
 }
 
-
+.stats {
+    display: flex;
+    min-height: min-content;
+}
 
 .game {
     box-sizing: border-box;
+    display: flex;
+    min-height: min-content;
     padding: 20px;
-    padding-top: 60px;
+    padding-top: 75px;
+    position: relative;
+    overflow-y: scroll;
 }
 
 .stats {
     box-sizing: border-box;
     padding: 20px;
-    padding-top: 60px;
+    padding-top: 75px;
 }
 
 
@@ -43,6 +56,8 @@ a {
     width: 100%;
     display: flex;
     flex-direction: column;
+    position: relative;
+    overflow-y: scroll;
 
     .column {
         display: flex;
