--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -3,7 +3,9 @@
 @import 'components/headlines';
 @import 'components/navigation';
 @import 'components/start';
+@import 'components/stats';
 @import 'components/upgrades';
+@import 'components/camera';
 
 html, body {
     display: flex;
@@ -16,6 +18,7 @@ html, body {
 #app {
     display: flex;
     flex: 1;
+    position: relative;
 }
 
 a {
