--- a/src/stylesheets/components/navigation.less
+++ b/src/stylesheets/components/navigation.less
@@ -45,9 +45,8 @@
         align-items: center;
         flex-direction: row;
 
-        img {
-            height: 24px;
-            margin-right: 10px;
+        p {
+            margin-left: 10px;
         }
     }
 }
