--- a/src/stylesheets/components/navigation.less
+++ b/src/stylesheets/components/navigation.less
@@ -28,7 +28,15 @@
     .dashboard-link {
         padding: 25px 15px;
         background-color: @blue;
-        margin-left: 15px;
+
+
+        &.blue {
+            background-color: @blue;
+        }
+
+        &.medPurple {
+            background-color: @mediumPurple;
+        }
     }
 
     h1 {
@@ -44,9 +52,15 @@
         display: flex;
         align-items: center;
         flex-direction: row;
+        padding-right: 10px;
+        margin-right: 15px;
 
         p {
             margin-left: 10px;
+        }
+
+        &:hover {
+            cursor:pointer;
         }
     }
 }
