--- a/src/stylesheets/mainStyles.less
+++ b/src/stylesheets/mainStyles.less
@@ -167,6 +167,14 @@ a {
         }
     }
 
+    &.backLightPurple {
+        background-color: @lightPurple;
+
+        &:hover {
+            background-color: hsl(hue(@lightPurple), 40%, 40%);
+        }
+    }
+
     &.backBlack {
         background-color: @darkGray;
 
