--- a/src/stylesheets/components/upgrades.less
+++ b/src/stylesheets/components/upgrades.less
@@ -35,6 +35,7 @@
         .power-ups {
             display: flex;
             padding: 40px 0px;
+            min-height: 320px;
             width: 90%;
 
             .power-up-container {
