--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -114,6 +114,40 @@ a {
 
     .right {
         flex: 1;
+        position: relative;
+
+        .error-popup {
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            top: 15px;
+            right: 0;
+            left: 0;
+            padding: 15px;
+            animation: fadeIn .7s;
+
+            h2 {
+                color: white;
+            }
+
+            a {
+                color: white;
+                justify-content: flex-end;
+                text-align: right;
+
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+
+            &.blue {
+                background-color: @blue;
+            }
+
+            &.yellow {
+                background-color: @yellow;
+            }
+        }
 
         .trends-panel {
             border-radius: 3px;
@@ -125,4 +159,9 @@ a {
                 margin-bottom: 10px;
             }
     }
+}
+
+@keyframes fadeIn {
+    0% {top: 40px; opacity: 0;}
+    100% {top: 15px; opacity: 1;}
 }
